--- a/popup/popup.html
+++ b/popup/popup.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="popup_dist.css">
     <title>Smarkets Monitor</title>
 </head>
 <body>
