--- a/popup/popup.html
+++ b/popup/popup.html
@@ -8,6 +8,6 @@
     <div id="log"></div>
     <button id="clear">Clear</button>
 
-    <script src="popup/popup.js"></script>
+    <script src="popup.js"></script>
 </body>
 </html>
