--- a/popup/popup.html
+++ b/popup/popup.html
@@ -2,25 +2,8 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="dist/popup.css" />
+    <link rel="stylesheet" href="popup.css" />
     <title>Smarkets Monitor</title>
-    <style>
-        :root {
-            --color-green: #00CA84;
-            --color-orange: #FF8000;
-            --color-white: #FFFFFF;
-            --color-black: #161616;
-            --color-gray: #3E3E3E;
-            --color-gray-dark: #1E1E1E;
-            --color-gray-light: #969696;
-        }
-
-        #app {
-            background-color: var(--color-black);
-            color: var(--color-white);
-            width: 24rem;
-        }
-    </style>
 </head>
 
 <body id="app">
