Add button to clear all storage data

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -7,6 +7,9 @@
 </head>
 
 <body id="app">
+    <div id="clear-container">
+        <button id="clear-button" name="clear">Clear</button>
+    </div>
     <div id="events-container"></div>
 
     <script src="popup.js"></script>
